commit_baitap01_part01_js

--- a/baitap01_part1.3.html
+++ b/baitap01_part1.3.html
@@ -7,20 +7,20 @@
 </head>
 <body>
     <script>
-        var Doldiem1 = 0;
-        var Doldiem2 = 0;
-        var Doldiem3 = 0;
+        var Doldiem1 = 96;
+        var Doldiem2 = 108;
+        var Doldiem3 = 89;
 
-        var Koadiem1 = 0;
-        var Koadiem2 = 0;
-        var Koadiem3 = 0;
+        var Koadiem1 = 88;
+        var Koadiem2 = 91;
+        var Koadiem3 = 110;
         //1. Tinh diem trung binh cua moi doi
         var Doltb = (Doldiem1 + Doldiem2 + Doldiem3)/3;
         var Koatb = (Koadiem1 + Koadiem2 + Koadiem3)/3;
 
         //2. So sanh diem trung binh cua moi doi
         if (Doltb > Koatb) {
-            console.log('Dolphins');
+            console.log('Dolphins is winner');
         }
     </script>
 </body>
