commit_baitap01_part01_js

--- a/part1_baitap03.html
+++ b/part1_baitap03.html
@@ -19,9 +19,11 @@
         var Koatb = (Koadiem1 + Koadiem2 + Koadiem3)/3;
 
         //2. So sanh diem trung binh cua moi doi
-        if (Doltb > Koatb) {
+        if (Koatb > 100 || Doltb > 100) {
             console.log('Dolphins is winner');
         }
+
+        
     </script>
 </body>
 </html>
