--- a/BAITAPTH_LAB01_Code/part2_baitap04.html
+++ b/BAITAPTH_LAB01_Code/part2_baitap04.html
@@ -12,10 +12,10 @@
         function calcTip(bill) {
             return bill >= 50 && bill <= 300 ? bill * 0.15 : bill * 0.2;
         }
-        const bills = [22, 295, 176, 440, 37, 105, 10, 1100, 86, 52];
+        var bills = [22, 295, 176, 440, 37, 105, 10, 1100, 86, 52];
 
-        const tips = [];
-        const totals = [];
+        var tips = [];
+        var totals = [];
         for (let i = 0; i < bills.length; i++) {
             const tip = calcTip(bills[i]);
             tips.push(tip);
