--- a/BAITAPTH_LAB01_Code/part3_baitap01.html
+++ b/BAITAPTH_LAB01_Code/part3_baitap01.html
@@ -7,7 +7,17 @@
 </head>
 <body>
     <script>
-        
+        var arr1 = [17, 21, 23];
+        var arr2 = [12, 5, -5, 0, 4];
+        function printForecast(arr) {
+            var result = '';
+            for (let i = 0; i < arr.length; i++) {
+                result += `...${arr[i]}ºC in ${i+1} days`;
+            }
+            console.log(result);
+        }
+        printForecast(arr1);
+        printForecast(arr2);
     </script>
 </body>
 </html>
